@@ -6,6 +6,10 @@ class reify(object):
 
     def __init__(self, wrapped):
         self.wrapped = wrapped
+        try:
+            self.__doc__ = wrapped.__doc__
+        except: # pragma: no cover
+            pass
 
     def __get__(self, inst, objtype=None):
         if inst is None:
